# lister

./: .gitignore  Cargo.toml  Cross.toml
.cargo/: config.toml
.github/workflows/: release.yml
migrations/2025-08-20-144341_create_lister_tables/: down.sql  up.sql
migrations/2025-08-21-180844_create_index/: down.sql  up.sql
migrations/2025-08-23-134237_create_settings/: up.sql
migrations/2025-09-15-183259_add_drive_available_space/: down.sql  up.sql
migrations/2025-09-16-084003_add_drive_insertion_date/: down.sql  up.sql
migrations/2025-10-26-181249_change_to_uuid/: up.sql
migrations/2026-03-11-152959_add-cascade-to-file-entries/: down.sql  up.sql
migrations/2026-03-15-081755_change-id-from-text-to-blob/: down.sql  up.sql
src/: counter.rs  lib.rs  main.rs  schema.rs
src/application/: delete_service.rs  directory_scanner.rs  file_indexing_service.rs  file_query_service.rs  language_service.rs  mod.rs
src/config/: constants.rs
src/domain/: mod.rs
src/domain/entities/: category.rs  directory.rs  drive.rs  file_entry.rs  language.rs  mod.rs  pagination.rs  types.rs
src/domain/errors/: domain_error.rs  mod.rs  repository_error.rs  scanner_error.rs
src/domain/model/: file_entry.rs  language.rs  mod.rs  pagination.rs
src/domain/ports/primary/: file_indexing_use_case.rs  file_query_use_case.rs  language_use_case.rs  mod.rs
src/domain/ports/secondary/: directory_picker.rs  mod.rs  repositories.rs  translation_loader.rs
src/domain/services/: directory_scanner.rs  file_indexing_service.rs  file_query_service.rs  language_service.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: binary_format.rs  command_repository.rs  conversion.rs  entities.rs  language_repository.rs  mod.rs  pool.rs  query_repository.rs  repository.rs  schema.rs  sqlite_repository.rs
src/infrastructure/filesystem/: directory.rs  drive_space.rs  mod.rs  native_directory_picker.rs
src/infrastructure/i18n/: json_translation_loader.rs  mod.rs
src/infrastructure/updater/: app_updater.rs  mod.rs  self_update.rs  updater.rs
src/ui/: app.rs  app_factory.rs  mod.rs
src/ui/components/: cache.rs  drive_combo_box.rs  file_list.rs  mod.rs  pagination.rs  search.rs
src/ui/components/delete/: category_combo_box.rs  mod.rs
src/ui/components/read/: cache.rs  drive_combo_box.rs  file_list.rs  mod.rs  pagination.rs  search.rs
src/ui/components/write/: indexing.rs  mod.rs
src/ui/messages/: app_message.rs  category_combo_box.rs  delete_message.rs  drive_combo_box.rs  mod.rs  read_message.rs  toaster_message.rs  write_message.rs
src/ui/pages/: delete_page.rs  mod.rs  read_page.rs  write_page.rs
src/ui/utils/: format_date_time.rs  mod.rs  translation.rs
src/utils/: dialogs.rs  mod.rs  self_update.rs
tests/: integration_tests.rs
translations/: en.json  fr.json
