[package]
name = "lister"
version = "1.1.5"
edition = "2024"
publish = false

[dependencies]

# Database
diesel = { version = "2.2", features = ["r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"], default-features = false }
diesel_migrations = "2.2"

# Async
async-trait = "0.1"
tokio = { version = "1.47", features = ["rt-multi-thread"], default-features = false }

# GUI
iced = { version = "0.13", features = ["image", "wgpu"], default-features = false }

# File system
rfd = "0.15"
walkdir = "2.5"

# Utilities
humansize = "2.1"
serde_json = "1.0"
thiserror = "2.0"

# Update
self_update = { version = "0.42", features = ["rustls"], default-features = false }

[dev-dependencies]
tempfile = "3.21"
tokio = { version = "1.47", features = ["macros"], default-features = false }

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled-windows"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = true