[package]
name = "lister"
version = "1.2.5"
edition = "2024"
publish = false

[dependencies]

# Database
diesel = { version = "2.3", features = ["chrono", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"], default-features = false }
diesel_migrations = { version = "2.3", default-features = false }

# Async
async-trait = "0.1"
tokio = { version = "1.47", features = ["rt-multi-thread"], default-features = false }

# GUI
iced = { version = "0.13", features = ["image", "wgpu", "auto-detect-theme"], default-features = false }
iced_aw = { version = "0.12", features = ["spinner"], default-features = false }

# File system
rfd = { version = "0.15", features = ["xdg-portal", "tokio"], default-features = false }
sysinfo = { version = "0.37", features = ["disk"], default-features = false }
walkdir = "2.5"

# Utilities
chrono = { version = "0.4", default-features = false }
humansize = { version = "2.1", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

# Update
self_update = { version = "0.42", features = ["rustls"], default-features = false }

[dev-dependencies]
tempfile = { version = "3.21", default-features = false }
tokio = { version = "1.47", features = ["macros"], default-features = false }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = true