[package]
name = "lister"
version = "1.2.13"
edition = "2024"
publish = false

[dependencies]

# Database
diesel = { version = "2.3", features = ["chrono", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"], default-features = false }
diesel_migrations = { version = "2.3", default-features = false }

# GUI
iced_aw = { version = "0.13", features = ["spinner"], default-features = false }

# File system
sysinfo = { version = "0.38.3", features = ["disk"], default-features = false }
jwalk = "0.8"

# Utilities
chrono = { version = "0.4", default-features = false }
humansize = { version = "2.1", default-features = false }
rayon = { version = "1.1", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
uuid = { version = "1.18.1", features = ["v4"], default-features = false }

# Update
self_update = { version = "0.42", features = ["rustls"], default-features = false }

# Linux-specific features
[target.'cfg(target_os = "linux")'.dependencies]
iced = { version = "0.14", features = ["advanced", "image", "tokio", "wayland", "wgpu"], default-features = false }
rfd = { version = "0.17", features = ["xdg-portal"], default-features = false }
tokio = { version = "1.47", features = ["rt-multi-thread"], default-features = false }

# Windows-specific features
[target.'cfg(target_os = "windows")'.dependencies]
iced = { version = "0.14", features = ["advanced", "image", "tokio", "wgpu"], default-features = false }
rfd = { version = "0.17", default-features = false }

# macOS-specific features
[target.'cfg(target_os = "macos")'.dependencies]
iced = { version = "0.14", features = ["advanced", "image", "tokio", "wgpu"], default-features = false }
rfd = { version = "0.17", default-features = false }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled"], default-features = false }

[dev-dependencies]
tempfile = { version = "3.21", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true